# kinode-sp1-prove

./: .gitignore  README.md
execution_engine/: Cargo.toml
execution_engine/elf/: riscv32im-succinct-zkvm-elf
execution_engine/src/: main.rs
node/: metadata.json
node/node/: Cargo.toml
node/node/src/: lib.rs
node/pkg/: manifest.json  metadata.json
node/prove_fib/: Cargo.toml
node/prove_fib/src/: lib.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
prove_fib/pkg/: manifest.json
prove_fib/prove_fib/: Cargo.toml
prove_fib/prove_fib/src/: lib.rs
script/: Cargo.toml  proof-with-pis.json
script/src/: main.rs
