[workspace]
[package]
version = "0.1.0"
name = "execution_engine"
edition = "2021"

[dependencies]
alloy-core = { version = "0.6.3", features = ["serde", "k256"] }
serde = { version = "1.0", features = ["derive"] }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
ed25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", rev = "0b45e00", version = "2.1.0" }
hex = "0.4"
sha2 = "0.10.8"

[patch.crates-io]
# Patch sha2 so we can use sha precompiles
sha2-v0-10-6 = { git = "https://github.com/succinctbot/RustCrypto-hashes.git", package = "sha2", branch = "main" }
